--- a/css/style.css
+++ b/css/style.css
@@ -19,4 +19,14 @@ body {
   font-family: "garamond";
   width: 300px;
   height: 300px;
+}
+
+.top {
+  border: 1px solid black;
+  border-radius: 25px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+  background-color: black;
+  width: 300px;
+  height: 25px;
 }/*# sourceMappingURL=style.css.map */
