--- a/css/style.css
+++ b/css/style.css
@@ -29,4 +29,8 @@ body {
   background-color: black;
   width: 300px;
   height: 25px;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }/*# sourceMappingURL=style.css.map */
