--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,8 @@ body {
   border: 1px solid black;
   border-radius: 25px;
   font-family: "garamond";
-  width: 300px;
-  height: 300px;
+  width: 500px;
+  height: 400px;
 }
 
 .top {
@@ -27,10 +27,31 @@ body {
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
   background-color: black;
-  width: 300px;
-  height: 25px;
+  width: 500px;
+  height: 43px;
+  font-size: 31px;
+  font-weight: 700;
   color: white;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.list-part {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+.list-part #text {
+  border-radius: 8px;
+  border: 1px solid black;
+  border-radius: 25px;
+  outline: none;
+  font-size: 25px;
+}
+.list-part #close {
+  border-radius: 50%;
+  width: 18px;
+  outline: none;
 }/*# sourceMappingURL=style.css.map */
