--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,14 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  list-style: none;
 }
 
 body {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   width: 100vw;
   height: 100vh;
 }
@@ -35,12 +37,14 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
 .list-part {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   margin-top: -22px;
   height: 100%;
 }
